Fixing broken link

--- a/src/_posts/2007-12-10-hinton-for-software-engineers.textile
+++ b/src/_posts/2007-12-10-hinton-for-software-engineers.textile
@@ -16,7 +16,7 @@ Primitives:
 !/img/sigma.png!
 
 * Forward compute (compute hidden nodes)
-!/img/foward.png!
+!/img/forward.png!
 
 where:
   @P = probabilty@
