--- a/src/resume.textile
+++ b/src/resume.textile
@@ -58,7 +58,7 @@ _World2One.com_ - Atlanta, GA                   %{float: right;}Internet DotCom%
 
 p<>. First employee of a startup. Initial network infrastructure designed and implemented. Architecture, design, and implementation of a highly scalable web-based service (before web services) written in C++ using IIS.
 
-(page-break)
+<div class='page-break'></div>
 
 *Software Engineer*                                        %{float: right;}1998%
 _RTS Software_ - Jerusalem, Israel            %{float: right;}Computer Software%
