--- a/src/resume.textile
+++ b/src/resume.textile
@@ -15,38 +15,45 @@ title: Frank Adam Laub - Resume
 
 h2. Projects
 
-*DotWeb* %{float: right;}"http://www.dotweb-toolkit.com":http://www.dotweb-toolkit.com%
-Port of GWT to .NET
-
-*PicTourist* %{float: right;}"http://www.pictourist.com":http://www.pictourist.com%
-Photo sharing site written in python & javascript using GAE.
+*BOOST_ENUM* %{float: right;}"http://lists.boost.org/Archives/boost/2005/12/97685.php":http://lists.boost.org/Archives/boost/2005/12/97685.php%
+Proposal for a type-safe enum for C++ using "boost's":http://www.boost.org/ preprocessor and template magic
 
 *OpenSSL.NET* %{float: right;}"http://openssl-net.sourceforge.net":http://openssl-net.sourceforge.net%
-Wrapper for accessing openssl from .NET with _over 5,000 downloads_
+Wrapper for accessing "openssl":http://www.openssl.org/ from .NET with _over 5,000 downloads_
 
-*BOOST_ENUM* %{float: right;}"http://lists.boost.org/Archives/boost/2005/12/97685.php":http://lists.boost.org/Archives/boost/2005/12/97685.php%
-Proposal for a type-safe enum for C++ using boost's preprocessor and template magic
+*PicTourist* %{float: right;}"http://www.pictourist.com":http://www.pictourist.com%
+Photo sharing site written in python & javascript hosted on "GAE":http://code.google.com/appengine/.
+
+*Sensei*
+Cross-platform IDE that integrates "Clang's":http://clang.llvm.org/ code completion features along with remote file editing capabilities.
+
+*DotWeb*
+Port of "GWT":http://code.google.com/webtoolkit/ to ".NET":http://www.microsoft.com/net/
 
 *Perfecto*
 Developer's text editor with syntax highlighting for Mac OS X written in Objective-C using Cocoa
 
 h2. Experience
 
-*Software Consultant*                            %{float: right;}2008 - 2009%
+*Network Software R&D*                           %{float: right;}2010 - Present%
+_CoCo Communications Corp._ - Seattle, WA   %{float: right;}Computer Networking%
+
+p<>. Linux kernel driver and embedded development utilizing OpenWRT. Helped bring TDD and Continuous Integration to the team. Migration of source control from subversion to git. Upgrade of build system from SCons to Waf.
+
+*Software Consultant*                               %{float: right;}2008 - 2010%
 _Various Clients_ - Los Angeles, CA
 
 p<>. Development of ASP.NET applications for large and small clients from design thru implementation to deployment. Agile and Scrum techniques used for project management. Domain Driven Design, Test Driven Development (TDD), and guidance from S#arp Architecture. Technologies used include NHibernate, ExtJS, NUnit, CruiseControl.NET.
 
-
 *Network Software R&D*                              %{float: right;}2003 - 2007%
 _CoCo Communications Corp._ - Seattle, WA   %{float: right;}Computer Networking%
 
-p<>. A lead designer of an ad-hoc mesh networking protocol written in C++. Creation of an accurate network simulator for research, functional testing, and demos. Co-authorship of a patent for a clustering sub-protocol which allows the mesh to scale. Development of a powerful cross-platform build system written in python using SCons. Designed and wrote a driver in C++ for WinNT, WinCE, and Linux. Embedded development on Windows Mobile devices.
+p<>. A lead designer of an ad-hoc mesh networking protocol written in C++. Creation of an accurate network simulator for research, functional testing, and demos. Co-authorship of a patent for a clustering sub-protocol which allows the mesh to scale. Development of a powerful cross-platform build system written in python using SCons. Designed and wrote a driver for WinNT, WinCE, and Linux. Embedded development on Windows Mobile devices.
 
 *Sr. Software Engineer*                             %{float: right;}2002 - 2003%
 _Cenzic, Inc._ - Seattle, WA        %{float: right;}Computer & Network Security%
 
-p<>. Development of Hailstorm Web, a platform for creating tests using a technique called fault injection in order to discover vulnerabilities in online applications with a focus on the web. Built hooks and reverse engineered interfaces of Internet Explorer to monitor and control every aspect of its communications with external network resources. Partially written in C++ and C# with heavy COM integration.
+p<>. Development of Hailstorm Web, a platform for creating tests using a technique called fault injection in order to discover vulnerabilities in online applications with a focus on HTTP traffic. Built hooks and reverse engineered interfaces of Internet Explorer to monitor and control every aspect of its communications with external network resources. Partially written in C++ and C# with heavy COM integration.
 
 *Sr. Software Engineer*                             %{float: right;}2001 - 2002%
 _Virtuoso_ - Seattle, WA              %{float: right;}Leisure, Travel & Tourism%
